# advent-of-code

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: aoc_2024.yml  aoc_2025.yml  template.yml
2024/day_0/: day_0.py  test_day_0.py
2024/day_01/: day_01.py  test_day_01.py
2024/day_02/: day_02.py  test_day_02.py
2024/day_03/: day_03.py  test_day_03.py
2024/day_04/: day_04.py  test_day_04.py
2024/day_05/: day_05.py  test_day_05.py
2024/day_06/: day_06.py  test_day_06.py
2024/day_07/: day_07.py  test_day_07.py
2024/day_08/: day_08.py  test_day_08.py
2024/day_09/: day_09.py  test_day_09.py
2024/day_1/: day_1.py  test_day_1.py
2024/day_10/: day_10.py  test_day_10.py
2024/day_11/: day_11.py  test_day_11.py
2024/day_12/: day_12.py  test_day_12.py
2024/day_13/: day_13.py  test_day_13.py
2024/day_14/: day_14.py  test_day_14.py
2024/day_15/: day_15.py  test_day_15.py
2024/day_16/: day_16.py  test_day_16.py
2024/day_17/: day_17.py  test_day_17.py
2024/day_18/: day_18.py  test_day_18.py
2024/day_19/: day_19.py  test_day_19.py
2024/day_2/: day_2.py  test_day_2.py
2024/day_20/: day_20.py  test_day_20.py
2024/day_21/: day_21.py  test_day_21.py
2024/day_22/: day_22.py  test_day_22.py
2024/day_23/: day_23.py  test_day_23.py
2024/day_24/: day_24.py  test_day_24.py
2024/day_25/: day_25.py  test_day_25.py
2024/day_3/: day_3.py  test_day_3.py
2024/day_4/: day_4.py  test_day_4.py
2024/day_6/: day_6.py  (+1 more)
aoc/: __init__.py  constants.py  data.py  utils.py
day_1/: day_1.py
template/: init_day.py
utils/: utils.py
(+16 files in other folders)
