[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "iniconfig==2.3.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "urllib3==2.6.3",
]
